<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="id"
        android:id="@+id/id_psicologo"
        android:visibility="gone" />

    <TextView
        android:text="Especialista en:"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView5"
        android:layout_alignBottom="@+id/fotoDetalle"
        android:layout_toRightOf="@+id/fotoDetalle" />

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Especialidad"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:layout_alignBaseline="@+id/textView5"
        android:layout_alignBottom="@+id/textView5"
        android:layout_toRightOf="@+id/textView5"
        android:layout_toEndOf="@+id/textView5" />


    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView11"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignLeft="@+id/textView11"
        android:layout_alignStart="@+id/textView11">

        <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Presentacion"
            android:layout_below="@+id/textView11"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignLeft="@+id/textView11"
            android:layout_alignStart="@+id/textView11"
            android:layout_above="@+id/Tonline" />

    </ScrollView>

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/consultorio"
        android:layout_alignBaseline="@+id/textView6"
        android:layout_alignBottom="@+id/textView6"
        android:layout_toRightOf="@+id/textView6"
        android:layout_toEndOf="@+id/textView6" />

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView8"
        android:layout_alignBottom="@+id/textView8"
        android:layout_toRightOf="@+id/textView8"
        android:layout_toEndOf="@+id/textView8"
        android:id="@+id/Estatus" />

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView13"
        android:layout_toRightOf="@+id/textView13"
        android:layout_toEndOf="@+id/textView13"
        android:id="@+id/Cedula" />


    <com.github.snowdream.android.widget.SmartImageView
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:src="@drawable/ic_launcher"
        android:id="@+id/fotoDetalle"
        android:adjustViewBounds="false"
        style="?android:attr/imageWellStyle"
        android:layout_below="@+id/opciones"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ratingBar2"
        android:maxHeight="37dip"
        android:minHeight="47dp"
        style="@style/Widget.AppCompat.RatingBar.Indicator"
        android:rating="4.5"
        android:layout_below="@+id/opciones"
        android:layout_toRightOf="@+id/fotoDetalle"
        android:layout_toEndOf="@+id/fotoDetalle" />

    <TextView
        android:text="Nombre:"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nombreDetalle"
        android:layout_below="@+id/ratingBar2"
        android:layout_toRightOf="@+id/fotoDetalle"
        android:layout_toEndOf="@+id/fotoDetalle" />

    <TextView
        android:text="Consultorio:"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView6"
        android:layout_below="@+id/textView5"
        android:layout_toLeftOf="@+id/textView5"
        android:layout_toStartOf="@+id/textView5" />

    <TextView
        android:text="Estatus:"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView8"
        android:layout_below="@+id/textView6"
        android:layout_alignLeft="@+id/textView6"
        android:layout_alignStart="@+id/textView6"
        android:layout_marginTop="14dp" />

    <TextView
        android:text="Cedula:"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView13"
        android:layout_below="@+id/textView8"
        android:layout_alignLeft="@+id/textView8"
        android:layout_alignStart="@+id/textView8" />

    <RelativeLayout
        android:id="@+id/costos"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/colorAccent"
        android:paddingLeft="10dp"
        android:layout_below="@+id/Cedula"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">


        <TextView
            android:text="Costo Online:"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/costoLabel"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:text="$300.00"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/costoLabel"
            android:layout_toRightOf="@+id/costoLabel"
            android:layout_toEndOf="@+id/costoLabel"
            android:id="@+id/textView3" />

        <TextView
            android:text="CostoPrecencial:"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/costopLabel"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/textView3"
            android:layout_toEndOf="@+id/textView3"
            android:layout_marginLeft="34dp"
            android:layout_marginStart="34dp" />

        <TextView
            android:text="$450.00"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/costopLabel"
            android:layout_toRightOf="@+id/costopLabel"
            android:layout_toEndOf="@+id/costopLabel"
            android:id="@+id/textView9" />
    </RelativeLayout>

    <TextView
        android:text="EXPERIENCIA:"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView11"
        android:layout_marginTop="11dp"
        android:layout_below="@+id/costos"
        android:layout_alignLeft="@+id/textView13"
        android:layout_alignStart="@+id/textView13" />

    <RelativeLayout
        android:id="@+id/opciones"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@android:color/background_light"
        android:paddingLeft="10dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">


        <Button
            android:text="@string/tonline"
            android:layout_width="wrap_content"
            android:layout_height="85dp"
            android:id="@+id/Tonline"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textStyle="normal|bold"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <Button
            android:text="@string/agendarCita"
            android:id="@+id/AgendarCita"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textStyle="normal|bold"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
    </RelativeLayout>

    <Button
        android:text="@string/ubicarConsultorio"
        android:id="@+id/UbicarConsultorio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="0dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:textStyle="normal|bold"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:visibility="gone" />


</RelativeLayout>